--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="mockito-all-1.9.0.jar"/>
-	<classpathentry kind="lib" path="spock-core-0.6-groovy-1.8.jar"/>
+	<classpathentry kind="lib" path="libs/mockito-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="libs/spock-core-0.6-groovy-1.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
