--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs/mockito-all-1.9.0.jar"/>
 	<classpathentry kind="lib" path="libs/spock-core-0.6-groovy-1.8.jar"/>
+	<classpathentry kind="lib" path="libs/xstream-1.4.2.jar"/>
+	<classpathentry kind="lib" path="libs/jettison-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
